--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,1 +1,21 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version"for (let index = 0; index < array.length; index++) {
+        const element = array[index];
+        do {
+            :
+        } while (condition);
+    } "0.2.0",
+        "configurations": [
+
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:8080",
+            "webRoot": "${workspaceFolder}"
+        }
+    ]
+}
